--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>STUDENT</h3>
           <p class="fst-italic">
-            I am always Energtic and Eager to Learn New skills. Adept to Motivate Others and Myself.
+            I am always Energetic and Eager to Learn New skills. Adept to Motivate Others and Myself.
           </p>
           <div class="row">
             <div class="col-lg-6">
